Added extra command line argiments for override FL properties